Description of epidemy

--- a/notes/loops.html
+++ b/notes/loops.html
@@ -194,7 +194,17 @@ print( isPrime(17) )
 
 <br>
 <br><li><a name="epidemic"></a><b>Epidemic</b>
-TODO
+
+<br>
+Suppose there was a breakout of a very contagious epidemic disease. Scientists
+suspect that every sick person contaminates, on average, 5 other people on the
+first day. How many people will be contaminated on the n<sup>th</sup> day?
+
+<br>
+<div class="python-code">
+# Task
+</div>
+
 </li>
 
 </ol>
