--- a/notes/loops.html
+++ b/notes/loops.html
@@ -46,6 +46,7 @@ forth. Everytime the code is repeated, the value stored in the loop variable
 changes.
 
 <br>
+<br>
 <div class="python-code">
 # range(n) is the list of integers from 0 to n-1
 def forExample1(n):
@@ -83,6 +84,7 @@ forExample3(1, 51, 10)
 <br>
 <br><li><a name="wow"></a><b>Wow</b>
 
+<br>
 <br>
 Given a number <em>n</em> write a program that prints 'Wo...ow' with <em>n</em>
 o's.
@@ -144,6 +146,7 @@ print( sumMtoN(10, 15) )
 <br>
 <li><a name="nested"></a><b>Nested loops</b>
 
+<br>
 <br>
 Print an <em>n x m</em> board with a <code>*</code> at each position.
 
@@ -230,6 +233,7 @@ whichShape(10)
 <li><a name="while"></a><b><code>while</code> loops</b>
 
 <br>
+<br>
 The "template" of a <code>while</code> command is:
 
 <br>
@@ -242,10 +246,11 @@ The "template" of a <code>while</code> command is:
 This is read as: while the condition is true, repeat the loop body. 
 
 <br>
-ATTENTION:
+<b style="color:red">ATTENTION:</b>
 if the condition is <b>always</b> true, your code will run forever (it loops
 infinitely). So you better check that the condition will become false eventually!
 
+<br>
 <br>
 <div class="python-code">
 def whileExample(n):
@@ -262,6 +267,7 @@ whileExample(17)
 <br>
 <br><li><a name="break-continue"></a><b>Controlling loops</b>
 
+<br>
 <br>
 A loop can be artificially stopped by using the command <code>break</code>.
 
@@ -305,6 +311,7 @@ well.
 <br><li><a name="prime"></a><b>Prime numbers</b>
 
 <br>
+<br>
 A number is called <em>prime</em> if it is only divisible by 1 and itself. Using
 loops, we can write a code that checks if a number is prime or not.
 
@@ -335,6 +342,7 @@ print( isPrime(17) )
 <br>
 <br><li><a name="epidemic"></a><b>Epidemic</b>
 
+<br>
 <br>
 Suppose there was a breakout of a very contagious epidemic disease. Scientists
 suspect that every sick person contaminates, on average, 5 other people on the
