Code developed in class

--- a/notes/jupyter.html
+++ b/notes/jupyter.html
@@ -3,8 +3,9 @@ title: Intro to Jupyter Notebook
 layout: notes
 ---
 
-Jupyter Notebook is an app that runs on the browser for editing and running
-<i>notebook documents</i>. According to Jupyter's website:
+<a href="http://jupyter.org/">Jupyter Notebook</a> is an app that runs on the
+browser for editing and running <i>notebook documents</i>. According to
+Jupyter's website:
 
 <blockquote>
 Notebook documents (or "notebooks", all lower case) are documents produced by
@@ -17,8 +18,9 @@ can be run to perform data analysis,
 
 Even though it runs on the browser, it is not on the
 internet! You will need to install it on your computer. Depending on how you
-installed python, you may already have it. To check that, open the terminal (or
-<i>cmd</i> for Windows) and type <tt>jupyter notebook</tt>.
+installed python, you may already have it. To check that, see if you can find
+Jupyter on your applications, or open the terminal (or <i>cmd</i> for Windows)
+and type <code>jupyter notebook</code>.
 If that does not work and you need to install it, go <a
 href="https://jupyter.readthedocs.io/en/latest/install.html#new-to-python-and-jupyter">here</a>.
 If that does not work, come see the course staff.
@@ -35,11 +37,17 @@ notebook</a> containing some basic information about its elements.
 
 <hr>
 
+During lecture we created a few graphs concerning arthritis inflammation. You
+can find the notebook <a href="inflammation.ipynb">here</a> and the (complete)
+data <a href="inflammation-all.csv">here</a>.
+
+<hr>
+
 <b>Some useful things to know:</b>
 
 <ul>
 <li> 
-  Each box after a <tt>In []:</tt> tag is called a <i>cell</i>. 
+  Each box after a <code>In []:</code> tag is called a <i>cell</i>. 
 </li>
 <li> 
   Cells can contain python code <b>or</b> explanatory text. 
@@ -52,15 +60,15 @@ notebook</a> containing some basic information about its elements.
 </li>
 <li>
   There are two main keyboard shortcuts to run the code or display the text in a
-  cell: <tt>ctrl + Enter</tt> and <tt>shift + enter</tt>. Using the
-  <tt>shift</tt> one creates a new cell.
+  cell: <code>ctrl + Enter</code> and <code>shift + enter</code>. Using the
+  <code>shift</code> one creates a new cell.
 </li>
 <li>
   Jupyter has two <i>modes</i>: a command mode (when cells cannot be edited and
   trying to type something down does weird things), and an edit mode (when cells
   can be edited). In command mode the left margin of the selected cell is blue,
   in edit mode it is green. You can switch modes by clicking in or out of a
-  cell, or by typing <tt>esc</tt> and <tt>enter</tt>.
+  cell, or by typing <code>esc</code> and <code>enter</code>.
 </li>
 <li>
   Keyboard shortcuts are our friends. Once we get used to them, they save us a
@@ -76,6 +84,27 @@ notebook</a> containing some basic information about its elements.
   ... in Jupyter?" is ok.
 </li>
 </ul>
+
+<hr>
+
+<b>Why notebooks?</b>
+
+Jupyter notebook is a nice environment for data analysis because we can, in one
+place, play around with the code, see graphs and document our analysis.
+Moreover, we can share our finding easily in a nicely formated way without
+having to worry about importing/copying things from one software to the other.
+People in the scientific community use it all the time, and so should you since
+you are on your path to becoming a scientist :)
+
+<br>
+<br>
+
+Some nice example of notebooks are a book on <a
+href="http://readiab.org/">introduction to applied bioinformatics</a>, and a course
+on <a href="http://py4life.yoavram.com/">python programming for biologists</a>
+(go to the "Lectures" tab and click on the tiny eye icons). You can browse more
+examples <a
+href="https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks">here</a>.
 
 
 
