--- a/notes/jupyter.html
+++ b/notes/jupyter.html
@@ -46,40 +46,40 @@ data <a href="inflammation-all.csv">here</a>.
 <b>Some useful things to know:</b>
 
 <ul>
-<li> 
+<li style="margin-bottom:10px"> 
   Each box after a <code>In []:</code> tag is called a <i>cell</i>. 
 </li>
-<li> 
+<li style="margin-bottom:10px"> 
   Cells can contain python code <b>or</b> explanatory text. 
 </li>
-<li> 
+<li style="margin-bottom:10px"> 
   The explanatory text can be typed using <i>markdown text</i>. That's the same
   syntax used on wiki pages, for example. <a
   href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">This</a>
   is a nice cheatsheet with markdown commands to make your text look nice.
 </li>
-<li>
+<li style="margin-bottom:10px">
   There are two main keyboard shortcuts to run the code or display the text in a
   cell: <code>ctrl + Enter</code> and <code>shift + enter</code>. Using the
   <code>shift</code> one creates a new cell.
 </li>
-<li>
+<li style="margin-bottom:10px">
   Jupyter has two <i>modes</i>: a command mode (when cells cannot be edited and
   trying to type something down does weird things), and an edit mode (when cells
   can be edited). In command mode the left margin of the selected cell is blue,
   in edit mode it is green. You can switch modes by clicking in or out of a
   cell, or by typing <code>esc</code> and <code>enter</code>.
 </li>
-<li>
+<li style="margin-bottom:10px">
   Keyboard shortcuts are our friends. Once we get used to them, they save us a
   lot of time! To see what shortcuts are available in Jupyter, go to Help >
   Keyboard Shortcuts.
 </li>
-<li>
+<li style="margin-bottom:10px">
   To reset a notebook (delete variables, close files, etc.) and start it from
   scratch, go to Kernel > Restart.
 </li>
-<li>
+<li style="margin-bottom:10px">
   Googling things like "What is the markdown syntax for ...?" and "How do I
   ... in Jupyter?" is ok.
 </li>
@@ -88,10 +88,11 @@ data <a href="inflammation-all.csv">here</a>.
 <hr>
 
 <b>Why notebooks?</b>
+<br>
 
 Jupyter notebook is a nice environment for data analysis because we can, in one
 place, play around with the code, see graphs and document our analysis.
-Moreover, we can share our finding easily in a nicely formated way without
+Moreover, we can share our findings easily in a nicely formated way without
 having to worry about importing/copying things from one software to the other.
 People in the scientific community use it all the time, and so should you since
 you are on your path to becoming a scientist :)
