--- a/notes/jupyter.html
+++ b/notes/jupyter.html
@@ -4,7 +4,7 @@ layout: notes
 ---
 
 <a href="http://jupyter.org/">Jupyter Notebook</a> is an app that runs on the
-browser for editing and running <i>notebook documents</i>. According to
+browser for editing and running <em>notebook documents</em>. According to
 Jupyter's website:
 
 <blockquote>
@@ -19,7 +19,7 @@ can be run to perform data analysis,
 Even though it runs on the browser, it is not on the
 internet! You will need to install it on your computer. Depending on how you
 installed python, you may already have it. To check that, see if you can find
-Jupyter on your applications, or open the terminal (or <i>cmd</i> for Windows)
+Jupyter on your applications, or open the terminal (or <em>cmd</em> for Windows)
 and type <code>jupyter notebook</code>.
 If that does not work and you need to install it, go <a
 href="https://jupyter.readthedocs.io/en/latest/install.html#new-to-python-and-jupyter">here</a>.
@@ -44,16 +44,17 @@ data <a href="inflammation-all.csv">here</a>.
 <hr>
 
 <b>Some useful things to know:</b>
+<br>
 
 <ul>
 <li style="margin-bottom:10px"> 
-  Each box after a <code>In []:</code> tag is called a <i>cell</i>. 
+  Each box after a <code>In []:</code> tag is called a <em>cell</em>.
 </li>
 <li style="margin-bottom:10px"> 
   Cells can contain python code <b>or</b> explanatory text. 
 </li>
 <li style="margin-bottom:10px"> 
-  The explanatory text can be typed using <i>markdown text</i>. That's the same
+  The explanatory text can be typed using <em>markdown text</em>. That's the same
   syntax used on wiki pages, for example. <a
   href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">This</a>
   is a nice cheatsheet with markdown commands to make your text look nice.
@@ -64,7 +65,7 @@ data <a href="inflammation-all.csv">here</a>.
   <code>shift</code> one creates a new cell.
 </li>
 <li style="margin-bottom:10px">
-  Jupyter has two <i>modes</i>: a command mode (when cells cannot be edited and
+  Jupyter has two <em>modes</em>: a command mode (when cells cannot be edited and
   trying to type something down does weird things), and an edit mode (when cells
   can be edited). In command mode the left margin of the selected cell is blue,
   in edit mode it is green. You can switch modes by clicking in or out of a
