--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     <div id="schedule" class="container section">
       <h2>Schedule</h2>
       <p>
-      In the table below, labs are in purple, exams are in red and the next
-      lecture/lab is yellow. Grey days are in the past or have no lectures.
+      In the table below, labs are in blue, exams are in red and the next
+      lecture/lab is orange. Green days are in the past, and grey days have no lectures.
       </p>
-      <table class="table table-sm" id="scheduleTable">
+      <table class="table" id="scheduleTable">
       </table>
     </div>
       
