Draft website contents

--- a/index.html
+++ b/index.html
@@ -91,22 +91,24 @@
           <tr>
             <td> Sundays and Tuesdays </td>
             <td> 13:30 to 14:50 </td>
-            <td> TBD </td>
+            <td> 2052 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
             <td> Thursdays </td>
             <td> 13:30 to 14:50 </td>
-            <td> TBD </td>
+            <td> 2062 </td>
             <td> <span class="badge badge-secondary">labs</span> </td>
           </tr>
+	  <tr>
+	  </tr>
         </tbody>
       </table>
       </p>
     </div>
     
     <div id="schedule" class="container section">
-      <h2>Schedule</h2>
+      <h2>Schedule (Subject to changes)</h2>
       <p>
       In the table below, labs are in blue, exams are in red and the next
       lecture/lab is orange. Green days are in the past, and grey days have no lectures.
@@ -120,7 +122,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-primary">
-            <div class="card-header">Gianni di Caro (Instructor)</div>
+            <div class="card-header">Gianni Di Caro (Teacher)</div>
             <div class="card-body">
               <p class="card-text">
               Office: 1007 <br>
@@ -132,7 +134,7 @@
         </div>
         <div class="col">
           <div class="card border-primary">
-            <div class="card-header">Giselle Reis (Instructor)</div>
+            <div class="card-header">Giselle Reis (Teacher)</div>
             <div class="card-body">
               <p class="card-text">
               Office: 1008 <br>
@@ -203,11 +205,11 @@
       
       <h4>Grading</h4>
       <p>
-        <b>Homework: x%</b> <br>
-        <b>Exam I: y%</b> <br>
-        <b>Exam II: z%</b> <br>
-        <b>Project: w%</b> <br>
-        <b>Final exam: u%</b>
+        <b>Homework: 35%</b> <br>
+        <b>Exam I: 10%</b> <br>
+        <b>Exam II: 10%</b> <br>
+        <b>Project: 20%</b> <br>
+        <b>Final exam: 25%</b>
       </p>
 
       <h4>Getting the Assignments</h4>
