Adding tools instructions

--- a/index.html
+++ b/index.html
@@ -252,7 +252,15 @@
       
       <p>
       <b>Setting up your programming environment:</b><br>
-      TODO
+      In this course you will use Python 3+ with libraries for scientific
+      computing (such as matplotlib and numpy). Additionally, it is helpful to
+      have an IDE (integrated development environment) where you can write, run,
+      and test your programs. Instead of installing all these things separately,
+      we <b>strongy</b> recommend you to install 
+      <a href="https://www.anaconda.com/download/"><u>Anaconda</u></a>, which
+      comes with everything you will need. Make sure to download the version
+      with Python 3.7. The download is big, so make sure you are at a place with
+      fast and reliable internet connection.
     </div>
       
     <div id="policy" class="container section">
