Overview and learning goals

--- a/index.html
+++ b/index.html
@@ -71,11 +71,24 @@
       <h2>15-110: Principles of Computing (Spring 2019)</h2>
       <p>
       <b>Overview</b><br>
-      TODO
+      We cannot ask everyone that carries a computer in their pockets to become
+      a computer scientist; just like we cannot all be chefs just because we
+      eat. But knowing a thing or two about cooking is essential.
+      In this course, we will teach you a thing or two about computer science.
+      
+      This is a course on programming and fundamental computing principles for
+      students with minimal or no background on the topic.
       </p>
       <p>
       <b>Learning goals</b><br>
-      TODO
+      <ul>
+      <li>Understanding what kind of problems computers are good at.</li>
+      <li>Analyzing and breaking down a problem into its smallest parts.</li>
+      <li>Finding solutions that can be programmed.</li>
+      <li>Programming in Python.</li>
+      <li>Using the computer to read and process data.</li>
+      <li>Understanding the limits of what a computer can solve.</li>
+      </ul>
       </p>
       <p>
       <b>Pre-requisites</b><br>
