almost final of web page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#grading">Grading</a>
           </li>
+	  <li class="nav-item">
+            <a class="nav-link" href="#homework">Homework</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#tools">Tools</a>
           </li>
@@ -167,14 +170,27 @@
     </p>
     <div id="goals" class="container section">
       <h2><b>Learning goals</b></h2>
-    <p>
-        To achieve a broad understanding of:
-        what Computer Science is and to be conversant in a broad variety of CS topics (that is, to exhibit CS literacy);
-        how CS techniques can positively impact non-CS majors; and
-        what coding is and how it can be broadly used even by non-experts.
-        To achieve sufficient coding skills to:
-        read, understand, and modify existing code; and
-        solve basic problems by writing, testing, and debugging code.
+      <p>
+	<ul>
+	  <li> To achieve a broad understanding and a practical expertise of what computing is, and, more
+        in general, of what computer science is.</li>
+	  <li>To develop the knowledge of what classes of problems computers are good at or are necessary
+	  for.</li>
+	  <li>To build the ability to analyze and abstract a given problem to represent it in a way which is ameneable
+	  to an algorithmic solution. </li>
+	  <li>To acquire the skills to step from a problem description, to a problem abstraction, to
+	    an effective algorithm, to an optimized computer program.</li>
+	  <li>To acquire the basic knowledge of some fundamental algorithmic solution techniques.</i>
+	  <li>To reach a proficiency level programming in Python using both
+	    procedural and  object-oriented techniques.</li>
+	  <li>To become a skilled practioner for using computer programming to read, write, and process
+	  complex data.</li>
+	  <li>To achieve a clear understanding of the time and memory requirements of a specific
+	  algorithm, and, more in general, of the inherent limits of what a specific computer can solve.
+	    </li>
+	  <li>To know how to effectively use python programming for general-purpose tasks such as
+	    data visualization and design and execution of simulated experiments.
+	</ul>
       </p>
     </div>
 
@@ -235,7 +251,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Gianni Di Caro (Teacher)</div>
+            <div class="card-header">Gianni A. Di Caro (Teacher)</div>
             <div class="card-body">
               <p class="card-text">
               Office: 1007 <br>
@@ -261,7 +277,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Abdullah Shaar (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: <br>
@@ -273,12 +289,12 @@
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Ward Ayan (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: <br>
               Office hours:
-              E-mail: <a href="mailto:@andrew.cmu.edu">@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:warda@andrew.cmu.edu">warda@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -287,12 +303,12 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Keivin Isufaj (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: <br>
               Office hours:
-              E-mail: <a href="mailto:@andrew.cmu.edu">@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:kisufaj@andrew.cmu.edu">kisufaj@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -329,7 +345,7 @@
       </p>
     </div>
 
-    <div id="grading" class="container section">
+    <div id="homework" class="container section">
       <h2><b>Homework assignments</b></h2>
       <p>
         There will be weekly homework assignments.
