added a cover image

--- a/index.html
+++ b/index.html
@@ -86,8 +86,15 @@
 
     <br><p>
     <div id="overview" class="container section">
-      <h1><b>15-110: Principles of Computing (Spring 2019)</b></h1>
-      <br>
+
+        <div class="image-txt-container">
+          <p style="float: left; min-width: 0px; vertical-align: middle;">
+	    <h1><b>15-110: Principles of Computing (Spring 2019)</b></h1></p>
+          <p><img src="cover-o.png" width="330"></p>
+        </div>
+
+	<!-- <h1><b>15-110: Principles of Computing (Spring 2019)</b></h1>
+      <br> -->
       <p>
         <h2><b>Overview</b></h2>
       <p>
