--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
             <div class="card-body">
               <p class="card-text">
               Office: <br>
-              Office hours:
-              E-mail: <a href="mailto:@andrew.cmu.edu">@andrew.cmu.edu</a>
+              Office hours: <br>
+              E-mail: <a href="mailto:ashaar@andrew.cmu.edu">ashaar@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -300,7 +300,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: <br>
-              Office hours:
+              Office hours: <br>
               E-mail: <a href="mailto:warda@andrew.cmu.edu">warda@andrew.cmu.edu</a>
               </p>
             </div>
@@ -314,7 +314,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: <br>
-              Office hours:
+              Office hours: <br>
               E-mail: <a href="mailto:kisufaj@andrew.cmu.edu">kisufaj@andrew.cmu.edu</a>
               </p>
             </div>
@@ -322,12 +322,12 @@
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Arambha Niraula (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: <br>
-              Office hours:
-              E-mail: <a href="mailto:@andrew.cmu.edu">@andrew.cmu.edu</a>
+              Office hours: <br>
+              E-mail: <a href="mailto:aniraula@andrew.cmu.edu">aniraula@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
