--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- Makes the schedule table -->
-    <script src="js/mkSchedule.js"></script>
+    <script src="js/mkSchedule.js?<?=time()?"></script>
 
     <style>
     body {
