--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="card-header">Abdullah Shaar (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: Food court <br>
+              Office: ARC <br>
               Office hours:
               <ul>
                 <li> Sunday: 11:00 - 12:00 </li>
