--- a/index.html
+++ b/index.html
@@ -351,6 +351,40 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header">Samar Rahmouni (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC <br>
+              Office hours:
+              <ul>
+                <li> Monday: 18:00 - 20:00 </li>
+              </ul>
+              E-mail: <a href="mailto:srahmoun@andrew.cmu.edu">srahmoun@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header">Mohamed Amara (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC <br>
+              Office hours:
+              <ul>
+                <li> TBD </li>
+              </ul>
+              E-mail: <a href="mailto:mamara@andrew.cmu.edu">mamara@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <br>
