--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD </li>
+                <li> Wednesday: 16:30 - 18:30 </li>
               </ul>
               E-mail: <a href="mailto:mamara@andrew.cmu.edu">mamara@andrew.cmu.edu</a>
               </p>
