created s19, new files for f19

--- a/s19/index.html
+++ b/s19/index.html
@@ -98,7 +98,7 @@
 
         <div class="image-txt-container">
           <p style="float: left; min-width: 0px; vertical-align: middle;">
-	    <h1><b>15-110: Principles of Computing (Fall 2019)</b></h1></p>
+	    <h1><b>15-110: Principles of Computing (Spring 2019)</b></h1></p>
           <p><img src="cover-o.png" width="330"></p>
         </div>
 
@@ -231,13 +231,13 @@
         <tbody>
           <tr>
             <td> Sundays and Tuesdays </td>
-            <td> 15:00 to 16:20pm </td>
-            <td> 2035 </td>
+            <td> 13:30 to 14:50 </td>
+            <td> 2052 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
             <td> Thursdays </td>
-            <td> 15:00 to 16:20 </td>
+            <td> 13:30 to 14:50 </td>
             <td> 2062 </td>
             <td> <span class="badge badge-secondary">labs</span> </td>
           </tr>
@@ -277,7 +277,7 @@
             </div>
           </div>
         </div>
-        <!--<div class="col">
+        <div class="col">
           <div class="card border-warning">
             <div class="card-header">Giselle Reis (Teacher)</div>
             <div class="card-body">
@@ -289,7 +289,6 @@
             </div>
           </div>
         </div>
-	-->
       </div><br>
       <div class="row">
         <div class="col">
@@ -403,14 +402,13 @@
       <p>
         <div class="image-txt-container">
           <ul style="float: left; min-width: 350px; vertical-align: middle;">
-            <li><b>Homework: 30%</b> </li>
-            <li><b>Midterm I: 10%</b> </li>
-            <li><b>Midterm II: 10%</b> </li>
-	    <li><b>Midterm III: 10%</b> </li>
+            <li><b>Homework: 35%</b> </li>
+            <li><b>Partial assessment test I: 10%</b> </li>
+            <li><b>Partial assessment test II: 10%</b> </li>
             <li><b>Project: 20%</b> </li>
-            <li><b>Final exam: 20%</b></li>
+            <li><b>Final exam: 25%</b></li>
           </ul>     
-          <!-- <p><img src="grading.png" width="330"></p> -->
+          <p><img src="grading.png" width="330"></p>
         </div>
       </p>
     </div>
@@ -423,7 +421,7 @@
         
       <p style="font-size:120%"><b>Getting the Assignments</b></p>
         The writeup and starter files for each assignment can be found on 
-        <a href="https://autolab.andrew.cmu.edu/courses/15110q-f19"><u>Autolab</u></a>.
+        <a href="https://autolab.andrew.cmu.edu/courses/15110q-s19"><u>Autolab</u></a>.
         Log in with your andrewID, select the course and then the assignment.
         You can see the <code>pdf</code> with the instructions by clicking on
         "View writeup".
@@ -441,7 +439,7 @@
         started code. 
       <p>
         The <code>zip</code> file needs to be submitted to
-        <a href="https://autolab.andrew.cmu.edu/courses/15110q-f19"><u>Autolab</u></a>.
+        <a href="https://autolab.andrew.cmu.edu/courses/15110q-s19"><u>Autolab</u></a>.
         It will immediately run a series of tests on your code and give you a
         score with some feedback. Make sure to check it! If your code does not
         pass all tests, you can submit it again until the deadline. <span
